bug fix: error when dragging new unconnected nodes